# HeartGuard

./: .gitignore  Doxyfile  LICENSE  Readme.md  patch.patch
Docs/html/: CircularDelay_8hpp.html  CircularDelay_8hpp__dep__incl.dot  CircularDelay_8hpp__incl.dot  CircularDelay_8hpp_source.html  DigitalFilters_8h.html  DigitalFilters_8h__dep__incl.dot  DigitalFilters_8h__incl.dot  DigitalFilters_8h_source.html  _formulas.tex  _formulas_dark.tex  ads1115_8cpp.html  ads1115_8cpp__incl.dot  ads1115_8cpp__incl.map  ads1115_8cpp__incl.md5  ads1115_8hpp.html  ads1115_8hpp__dep__incl.dot  ads1115_8hpp__dep__incl.map  ads1115_8hpp__dep__incl.md5  ads1115_8hpp__incl.dot  ads1115_8hpp__incl.map  ads1115_8hpp__incl.md5  ads1115_8hpp_source.html  ads1115__test_8cpp.html  ads1115__test_8cpp__incl.dot  ads1115__test_8cpp__incl.map  ads1115__test_8cpp__incl.md5  annotated.html  classADS1115-members.html  classADS1115.html  classADS1115__coll__graph.dot  classADS1115__coll__graph.map  classADS1115__coll__graph.md5  classADS1115_aa3063eac80a95f6db16950e9783bc92b_icgraph.dot  classADS1115_aa3063eac80a95f6db16950e9783bc92b_icgraph.map  classADS1115_aa3063eac80a95f6db16950e9783bc92b_icgraph.md5  classADS1115_aa646dc96bee97bb39b003a50332d0ba4_cgraph.dot  classADS1115_aa646dc96bee97bb39b003a50332d0ba4_cgraph.map  classADS1115_aa646dc96bee97bb39b003a50332d0ba4_cgraph.md5  classCircularDelay-members.html  classCircularDelay.html  (+541 more)
Docs/latex/: ads1115_8cpp.tex  ads1115_8cpp__incl.md5  ads1115_8hpp.tex  ads1115_8hpp__dep__incl.md5  ads1115_8hpp__incl.md5  ads1115__test_8cpp.tex  ads1115__test_8cpp__incl.md5  annotated.tex  classADS1115.tex  classADS1115_aa3063eac80a95f6db16950e9783bc92b_icgraph.md5  classADS1115_aa646dc96bee97bb39b003a50332d0ba4_cgraph.md5  classMAX30102.tex  classMAX30102__coll__graph.md5  classMAX30102_a023a175af4f01d54f24f632296f71775_cgraph.md5  classMAX30102_a2e9b9a516572433c2dec4a304acb67f7_icgraph.md5  classMAX30102_a4d436e6c3874f03fc32ca1412fbd8dfb_icgraph.md5  classMAX30102_a99dd07d94cdca56a0116bd3bc40eeb66_icgraph.md5  classMAX30102_ab148e8492b5c8b5bc60b501ed84f3d46_cgraph.md5  classMAX30102_ac17326fd1347d61dfbfd5ab76d039fb2_icgraph.md5  classMAX30102_ac20a8b68fcf978b71f3fde1bb516dde8_cgraph.md5  classMAX30102_ad78ce89aa47f2c6e1a3cf07a6966c2c9_icgraph.md5  classMAX30102_ae11f7b66a205c5e465668fa401427737_icgraph.md5  classMAX30102_aeaf1c7ea1764c7d0553386cabfb783e6_icgraph.md5  dir_05189fd0dce105a39214232ecff79d48.tex  dir_0f05551bec2e356b5b4633bda4b6fd8d.tex  dir_0f05551bec2e356b5b4633bda4b6fd8d_dep.md5  dir_1ce36a221660cee7dd42d8982533f1c0.tex  dir_36995afa01e04bb4b2112f7dcb1941d5.tex  dir_4e9c05acfa2c3671b8618fcb95d57d96.tex  dir_4e9c05acfa2c3671b8618fcb95d57d96_dep.md5  dir_4f9538d0e23f9eaa41c1c6f4181212d5.tex  dir_4fedc7ead3d2b404954f303db05aff23.tex  dir_4fedc7ead3d2b404954f303db05aff23_dep.md5  dir_839fbf753b9e0f13760fe2f9af0b11b6.tex  dir_970d6700fad0eea1fd73061d0f7b3c90.tex  dir_970d6700fad0eea1fd73061d0f7b3c90_dep.md5  dir_a0d0cfd3eed1b74f03698919d30d8fc6.tex  dir_a0d0cfd3eed1b74f03698919d30d8fc6_dep.md5  dir_ad7a4be99d22e5c07ffe4ece695aec7f.tex  dir_ae60f9dd799ab308b08b46e9fb621a87.tex  (+21 more)
Docs/pdf/: CircularDelay_8hpp.tex  CircularDelay_8hpp.tex.tmp  CircularDelay_8hpp__dep__incl.dot  CircularDelay_8hpp__incl.dot  CircularDelay_8hpp_source.tex  DigitalFilters_8h.tex  DigitalFilters_8h__dep__incl.dot  (+348 more)
Hardware/: Readme.md
Software/Firmware/: CMakeLists.txt
Software/Firmware/cmake/: clang_format.cmake  compiler_options.cmake  cpack.cmake  cppcheck.cmake  dependencies.cmake
Software/Firmware/project/: CMakeLists.txt
Software/Firmware/project/ads1115/: CMakeLists.txt
Software/Firmware/project/ads1115/include/: ads1115.hpp
Software/Firmware/project/ads1115/src/: ads1115.cpp
Software/Firmware/project/ads1115/test/: ads1115_test.cpp
Software/Firmware/project/ecg/: CMakeLists.txt
Software/Firmware/project/ecg/include/: ecg.hpp
Software/Firmware/project/ecg/src/: ecg.cpp
Software/Firmware/project/ecg/test/: ecg_test.cpp
Software/Firmware/project/ecg_processing/: CMakeLists.txt
Software/Firmware/project/ecg_processing/include/: ecg_processing.hpp
Software/Firmware/project/ecg_processing/src/: ecg_processing.cpp
Software/Firmware/project/ecg_processing/test/: ecg_processing_test.cpp
Software/Firmware/project/heartguard/: CMakeLists.txt
Software/Firmware/project/heartguard/include/: heartguard.hpp
Software/Firmware/project/heartguard/src/: heartguard.cpp
Software/Firmware/project/heartguard/test/: heartguard_test.cpp
Software/Firmware/project/iir/: CMakeLists.txt
Software/Firmware/project/iir/include/: Biquad.h  Butterworth.h  Cascade.h  ChebyshevI.h  ChebyshevII.h  Common.h  Custom.h  Layout.h  MathSupplement.h  PoleFilter.h  RBJ.h  State.h  Types.h
Software/Firmware/project/iir/src/: Biquad.cpp  Butterworth.cpp  Cascade.cpp  ChebyshevI.cpp  ChebyshevII.cpp  Custom.cpp  PoleFilter.cpp  RBJ.cpp
Software/Firmware/project/max30102/: CMakeLists.txt
Software/Firmware/project/max30102/include/: i2c-dev.h  max30102.bkphpp  max30102.hpp
Software/Firmware/project/max30102/src/: max30102.bkpcpp  max30102.cpp  visualize.cpp
Software/Firmware/project/max30102/test/: max30102_test.cpp
Software/Firmware/project/ppg/: CMakeLists.txt
Software/Firmware/project/ppg/include/: DigitalFilters.h  HeartRate.h  ppg.hpp
Software/Firmware/project/ppg/include/CircularDelay/: CircularDelay.hpp
Software/Firmware/project/ppg/src/: HeartRate.cpp  ppg.cpp
Software/Firmware/project/ppg/test/: ppg_test.cpp
Software/Firmware/project/tcpserver/: CMakeLists.txt
Software/Firmware/project/tcpserver/include/: tcpserver.hpp
Software/Firmware/project/tcpserver/src/: tcpserver.cpp
Software/GUI/: CMakeLists.txt  dashboard.py  dashboardnew.py  ecg_server.py  main.cpp  pyqt_frontend.py  requirements.txt  tcpclient.cpp  tcpclient.hpp  window.cpp  window.h
Software/GUI/QTGUI/: CMakeLists.txt  window.cpp  window.h
Software/GUI/assets/: adam_ecg_raw.csv  styles.css
Software/GUI/include/: CppTimer.h
Software/GUI/src/: main.cpp  window.cpp  window.h
(+104 files in other folders)
